--- a/src/meter.css
+++ b/src/meter.css
@@ -1,256 +1,312 @@
-html, body
-			{
-				padding: 0;
-				margin: 0;
-			}
+html,
+body {
+	padding: 0;
+	margin: 0;
+}
 
-			body,
-			.dial
-			{
-				background-color: #000;
-				overflow: hidden;
-			}
-			h1{
-				color:white;
-			}
+body,
+.dial {
+	background-color: #000;
 
+}
 
-			.gauge
-			{
-				/* background-color: aqua; */
-				position: relative;
-				width: 500px;
-				/* width: 50%; */
-				height: 500px;
-				top: 30px;
-				left: 40%;
-				margin-left: -500px;
-				border-radius: 100%;
-				transform-origin: 50% 50%;
-				-webkit-transform-origin: 50% 50%;
-				-ms-transform-origin: 50% 50%;
-				-webkit-transform: rotate(0deg);
-
-			}
-			.gauge1
-			{
-				/* background-color: #FEE62A; */
-				position: relative;
-				width: 500px;
-				/* width: 50%; */
-				height: 500px;
-				top: -67vh;
-				left: 40%;
-				margin-left: 250px;
-				border-radius: 100%;
-				transform-origin: 50% 50%;
-				-webkit-transform-origin: 50% 50%;
-				-ms-transform-origin: 50% 50%;
-				-webkit-transform: rotate(0deg);
-
-			}
-
-			.meter
-			{
-				margin: 0;
-				padding: 0;
-			}
-			.meter1
-			{
-				margin: 0;
-				padding: 0;
-			}
-
-			.meter > li
-			{
-				width: 250px;
-				height: 250px;
-				list-style-type: none;
-				position: absolute;
-				border-top-left-radius: 250px;
-				border-top-right-radius: 0px;
-				transform-origin:  100% 100%;;
-				-webkit-transform-origin:  100% 100%;;
-				-ms-transform-origin:  100% 100%;;
-				transition-property: -webkit-transform;
-				pointer-events: none;
-			}
-			.meter1 > li
-			{
-				width: 250px;
-				height: 250px;
-				list-style-type: none;
-				position: absolute;
-				border-top-left-radius: 250px;
-				border-top-right-radius: 0px;
-				transform-origin:  100% 100%;;
-				-webkit-transform-origin:  100% 100%;;
-				-ms-transform-origin:  100% 100%;;
-				transition-property: -webkit-transform;
-				pointer-events: none;
-			}
-
-			.meter .low
-			{
-				transform: rotate(0deg); /* W3C */
-				-webkit-transform: rotate(0deg); /* Safari & Chrome */
-				-moz-transform: rotate(0deg); /* Firefox */
-				-ms-transform: rotate(0deg); /* Internet Explorer */
-				-o-transform: rotate(0deg); /* Opera */
-				z-index: 8;
-				background-color: rgb(184, 9, 9);
-			}
-			.meter1 .low
-			{
-				transform: rotate(0deg); /* W3C */
-				-webkit-transform: rotate(0deg); /* Safari & Chrome */
-				-moz-transform: rotate(0deg); /* Firefox */
-				-ms-transform: rotate(0deg); /* Internet Explorer */
-				-o-transform: rotate(0deg); /* Opera */
-				z-index: 8;
-				background-color: rgb(184, 9, 9);
-			}
-
-			.meter .normal
-			{
-				transform: rotate(47deg); /* W3C */
-				-webkit-transform: rotate(47deg); /* Safari & Chrome */
-				-moz-transform: rotate(47deg); /* Firefox */
-				-ms-transform: rotate(47deg); /* Internet Explorer */
-				-o-transform: rotate(47deg); /* Opera */
-				z-index: 7;
-				background-color: #FEE62A;
-			}
-			.meter1 .normal
-			{
-				transform: rotate(47deg); /* W3C */
-				-webkit-transform: rotate(47deg); /* Safari & Chrome */
-				-moz-transform: rotate(47deg); /* Firefox */
-				-ms-transform: rotate(47deg); /* Internet Explorer */
-				-o-transform: rotate(47deg); /* Opera */
-				z-index: 7;
-				background-color: #FEE62A;
-			}
-
-			.meter .high
-			{
-				transform: rotate(90deg); /* W3C */
-				-webkit-transform: rotate(90deg); /* Safari & Chrome */
-				-moz-transform: rotate(90deg); /* Firefox */
-				-ms-transform: rotate(90deg); /* Internet Explorer */
-				-o-transform: rotate(90deg); /* Opera */
-				z-index: 6;
-				background-color: rgb(31, 219, 141);
-			}
-			.meter1 .high
-			{
-				transform: rotate(90deg); /* W3C */
-				-webkit-transform: rotate(90deg); /* Safari & Chrome */
-				-moz-transform: rotate(90deg); /* Firefox */
-				-ms-transform: rotate(90deg); /* Internet Explorer */
-				-o-transform: rotate(90deg); /* Opera */
-				z-index: 6;
-				background-color: rgb(31, 219, 141);
-			}
-
-			
-			.dial,
-			.dial .inner
-			{
-				width: 470px;
-				height: 470px;
-				position: relative;
-				top: 10px;
-				left: 5px;
-				border-radius: 100%;
-				border-color: purple;
-				z-index: 10;
-				transition-property: -webkit-transform;
-				transition-duration: 1s;
-				transition-timing-function: ease-in-out;
-				transform: rotate(0deg); /* W3C */
-				-webkit-transform: rotate(0deg); /* Safari & Chrome */
-				-moz-transform: rotate(0deg); /* Firefox */
-				-ms-transform: rotate(0deg); /* Internet Explorer */
-				-o-transform: rotate(0deg); /* Opera */
-			}
-
-			.dial .arrow
-			{
-				width: 0; 
-				height: 0; 
-				position: absolute;
-				top: 214px;
-				left: 24px;
-				border-left: 5px solid transparent;
-				border-right: 5px solid transparent;
-				border-bottom: 32px solid #FFFFFF;
-				-webkit-transform: rotate(-88deg); /* Safari & Chrome */
-				-moz-transform: rotate(88deg); /* Firefox */
-				-ms-transform: rotate(88deg); /* Internet Explorer */
-				-o-transform: rotate(88deg); /* Opera */
-
-			}
-
-			.gauge .value
-			{
-				font-family: 'Josefin Slab', serif;
-				font-size: 50px;
-				color: #ffffff;
-				position: absolute;
-				top: 142px;
-				left: 45%;
-				z-index: 11;
-			}
+h1 {
+	color: white;
+}
 
 
-			
-			.dial1,
-			.dial1 .inner
-			{
-				width: 470px;
-				height: 470px;
-				position: relative;
-				top: 1.5vh;
-				left: 5px;
-				border-radius: 100%;
-				border-color: purple;
-				z-index: 10;
-				background-color: black;
-				transition-property: -webkit-transform;
-				transition-duration: 1s;
-				transition-timing-function: ease-in-out;
-				transform: rotate(0deg); /* W3C */
-				-webkit-transform: rotate(0deg); /* Safari & Chrome */
-				-moz-transform: rotate(0deg); /* Firefox */
-				-ms-transform: rotate(0deg); /* Internet Explorer */
-				-o-transform: rotate(0deg); /* Opera */
-			}
+.gauge {
+	/* background-color: aqua; */
+	position: relative;
+	width: 500px;
+	/* width: 50%; */
+	height: 500px;
+	top: 30px;
+	left: 40%;
+	margin-left: -500px;
+	border-radius: 100%;
+	transform-origin: 50% 50%;
+	-webkit-transform-origin: 50% 50%;
+	-ms-transform-origin: 50% 50%;
+	-webkit-transform: rotate(0deg);
 
-			.dial1 .arrow
-			{
-				width: 0; 
-				height: 0; 
-				position: absolute;
-				top: 214px;
-				left: 24px;
-				border-left: 5px solid transparent;
-				border-right: 5px solid transparent;
-				border-bottom: 32px solid #FFFFFF;
-				-webkit-transform: rotate(-88deg); /* Safari & Chrome */
-				-moz-transform: rotate(88deg); /* Firefox */
-				-ms-transform: rotate(88deg); /* Internet Explorer */
-				-o-transform: rotate(88deg); /* Opera */
+}
 
-			}
+.gauge1 {
+	/* background-color: #FEE62A; */
+	position: relative;
+	width: 500px;
+	/* width: 50%; */
+	height: 500px;
+	top: -67vh;
+	left: 40%;
+	margin-left: 250px;
+	border-radius: 100%;
+	transform-origin: 50% 50%;
+	-webkit-transform-origin: 50% 50%;
+	-ms-transform-origin: 50% 50%;
+	-webkit-transform: rotate(0deg);
 
-			.gauge1 .value1
-			{
-				font-family: 'Josefin Slab', serif;
-				font-size: 50px;
-				color: #ffffff;
-				position: absolute;
-				top: 140px;
-				left: 45%;
-				z-index: 11;
-			}
+}
+
+.meter {
+	margin: 0;
+	padding: 0;
+}
+
+.meter1 {
+	margin: 0;
+	padding: 0;
+}
+
+.meter>li {
+	width: 250px;
+	height: 250px;
+	list-style-type: none;
+	position: absolute;
+	border-top-left-radius: 250px;
+	border-top-right-radius: 0px;
+	transform-origin: 100% 100%;
+	;
+	-webkit-transform-origin: 100% 100%;
+	;
+	-ms-transform-origin: 100% 100%;
+	;
+	transition-property: -webkit-transform;
+	pointer-events: none;
+}
+
+.meter1>li {
+	width: 250px;
+	height: 250px;
+	list-style-type: none;
+	position: absolute;
+	border-top-left-radius: 250px;
+	border-top-right-radius: 0px;
+	transform-origin: 100% 100%;
+	;
+	-webkit-transform-origin: 100% 100%;
+	;
+	-ms-transform-origin: 100% 100%;
+	;
+	transition-property: -webkit-transform;
+	pointer-events: none;
+}
+
+.meter .low {
+	transform: rotate(0deg);
+	/* W3C */
+	-webkit-transform: rotate(0deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(0deg);
+	/* Firefox */
+	-ms-transform: rotate(0deg);
+	/* Internet Explorer */
+	-o-transform: rotate(0deg);
+	/* Opera */
+	z-index: 8;
+	background-color: rgb(184, 9, 9);
+}
+
+.meter1 .low {
+	transform: rotate(0deg);
+	/* W3C */
+	-webkit-transform: rotate(0deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(0deg);
+	/* Firefox */
+	-ms-transform: rotate(0deg);
+	/* Internet Explorer */
+	-o-transform: rotate(0deg);
+	/* Opera */
+	z-index: 8;
+	background-color: rgb(184, 9, 9);
+}
+
+.meter .normal {
+	transform: rotate(47deg);
+	/* W3C */
+	-webkit-transform: rotate(47deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(47deg);
+	/* Firefox */
+	-ms-transform: rotate(47deg);
+	/* Internet Explorer */
+	-o-transform: rotate(47deg);
+	/* Opera */
+	z-index: 7;
+	background-color: #FEE62A;
+}
+
+.meter1 .normal {
+	transform: rotate(47deg);
+	/* W3C */
+	-webkit-transform: rotate(47deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(47deg);
+	/* Firefox */
+	-ms-transform: rotate(47deg);
+	/* Internet Explorer */
+	-o-transform: rotate(47deg);
+	/* Opera */
+	z-index: 7;
+	background-color: #FEE62A;
+}
+
+.meter .high {
+	transform: rotate(90deg);
+	/* W3C */
+	-webkit-transform: rotate(90deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(90deg);
+	/* Firefox */
+	-ms-transform: rotate(90deg);
+	/* Internet Explorer */
+	-o-transform: rotate(90deg);
+	/* Opera */
+	z-index: 6;
+	background-color: rgb(31, 219, 141);
+}
+
+.meter1 .high {
+	transform: rotate(90deg);
+	/* W3C */
+	-webkit-transform: rotate(90deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(90deg);
+	/* Firefox */
+	-ms-transform: rotate(90deg);
+	/* Internet Explorer */
+	-o-transform: rotate(90deg);
+	/* Opera */
+	z-index: 6;
+	background-color: rgb(31, 219, 141);
+}
+
+
+.dial,
+.dial .inner {
+	width: 470px;
+	height: 470px;
+	position: relative;
+	top: 10px;
+	left: 5px;
+	border-radius: 100%;
+	border-color: purple;
+	z-index: 10;
+	transition-property: -webkit-transform;
+	transition-duration: 1s;
+	transition-timing-function: ease-in-out;
+	transform: rotate(0deg);
+	/* W3C */
+	-webkit-transform: rotate(0deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(0deg);
+	/* Firefox */
+	-ms-transform: rotate(0deg);
+	/* Internet Explorer */
+	-o-transform: rotate(0deg);
+	/* Opera */
+}
+
+.dial .arrow {
+	width: 0;
+	height: 0;
+	position: absolute;
+	top: 214px;
+	left: 24px;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 32px solid #FFFFFF;
+	-webkit-transform: rotate(-88deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(88deg);
+	/* Firefox */
+	-ms-transform: rotate(88deg);
+	/* Internet Explorer */
+	-o-transform: rotate(88deg);
+	/* Opera */
+
+}
+
+.gauge .value {
+	font-family: 'Josefin Slab', serif;
+	font-size: 50px;
+	color: #ffffff;
+	position: absolute;
+	top: 142px;
+	left: 45%;
+	z-index: 11;
+}
+
+
+
+.dial1,
+.dial1 .inner {
+	width: 470px;
+	height: 470px;
+	position: relative;
+	top: 1.5vh;
+	left: 5px;
+	border-radius: 100%;
+	border-color: purple;
+	z-index: 10;
+	background-color: black;
+	transition-property: -webkit-transform;
+	transition-duration: 1s;
+	transition-timing-function: ease-in-out;
+	transform: rotate(0deg);
+	/* W3C */
+	-webkit-transform: rotate(0deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(0deg);
+	/* Firefox */
+	-ms-transform: rotate(0deg);
+	/* Internet Explorer */
+	-o-transform: rotate(0deg);
+	/* Opera */
+}
+
+.dial1 .arrow {
+	width: 0;
+	height: 0;
+	position: absolute;
+	top: 214px;
+	left: 24px;
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 32px solid #FFFFFF;
+	-webkit-transform: rotate(-88deg);
+	/* Safari & Chrome */
+	-moz-transform: rotate(88deg);
+	/* Firefox */
+	-ms-transform: rotate(88deg);
+	/* Internet Explorer */
+	-o-transform: rotate(88deg);
+	/* Opera */
+
+}
+
+.gauge1 .value1 {
+	font-family: 'Josefin Slab', serif;
+	font-size: 50px;
+	color: #ffffff;
+	position: absolute;
+	top: 140px;
+	left: 45%;
+	z-index: 11;
+}
+#dropdown-basic
+{
+	margin-top: 28px;
+	width: 500px;
+}
+#dropdown-basic1
+{
+	margin-top: 21px;
+	width: 500px;
+}
+#dropdown-style
+{
+	width: 500px;
+}
