first page design

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,30 @@ span#et-info-phone:before {
   font-family: FontAwesome !important;
   content: '10b' !important;
 }
+
+input {
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+  background-color: transparent;
+  border-color: yellow;
+  }
+
+  .box {
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    border-bottom-style: groove;
+    background-color: transparent;
+    border-color: rgb(69, 117, 172);
+    background: transparent;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: rgb(69, 117, 172) !important;
+}
